fix tag line in readme

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Negotiator
 ==========
 
-Content Negotiation Library for Python
+Proper Content Negotiation for Python
 
 Introduction
 ------------
